--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Intall dependencies
         uses: awalsh128/cache-apt-pkgs-action@latest
         with:
-          packages: libgtk-3-dev libwebkit2gtk-4.1-dev libgtk-layer-shell-dev
+          packages: libgtk-3-dev libwebkit2gtk-4.1-dev libgtk-layer-shell-dev libxcb-ewmh-dev
           version: 1.0
       - name: 🏗️ Build
         run: make BUILD_PROFILE=RELEASE
